--- a/Logistic_Regression_Classifier_as_a_Neural_Network.ipynb
+++ b/Logistic_Regression_Classifier_as_a_Neural_Network.ipynb
@@ -23,7 +23,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import h5py # package for interacting with a dataset that is stored on an H5 file\n",
-    "# import scipy\n",
+    "import scipy\n",
     "from PIL import Image # Python Imaging Library\n",
     "from scipy import ndimage # PIL & SciPy will be used to test the model with any picture at the end\n",
     "\n",
